feat: AI 모델 및 스토리보드 기능 개선
- .gitignore 파일에서 불필요한 항목 제거 및 정리
- App.tsx에서 API 키 관련 코드 정리 및 새로운 Gemini 서비스 통합
- constants.ts에서 AI 모델 목록 업데이트: Gemini 2.5 Flash, Imagen 4.0 등 추가
- sampleData.ts에서 샘플 스토리 아이디어 데이터 업데이트
- 비디오 및 이미지 생성 관련 컴포넌트에서 새로운 기능 추가 및 개선
- 언어 설정 및 API 키 관리 기능 개선

이제 사용자는 최신 AI 모델을 활용하여 더욱 향상된 스토리보드 생성 경험을 할 수 있습니다.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -246,7 +246,10 @@
   },
   "visualArt": {
     "title": "Visual Art Generator",
-    "textInputLabel": "Enter Text for Animation",
+    "instruction": "Provide text, an image, or both to generate a video.",
+    "imageInputLabel": "Image (Optional)",
+    "removeImage": "Remove Image",
+    "textInputLabel": "Text (Optional)",
     "textInputPlaceholder": "Type your text here...",
     "styleTitle": "Choose Visual Effect",
     "generateButton": "Generate Video",
