--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -246,7 +246,10 @@
   },
   "visualArt": {
     "title": "비주얼 아트 생성기",
-    "textInputLabel": "애니메이션에 사용할 텍스트 입력",
+    "instruction": "비디오를 생성하려면 텍스트, 이미지 또는 둘 다 제공하세요.",
+    "imageInputLabel": "이미지 (선택 사항)",
+    "removeImage": "이미지 제거",
+    "textInputLabel": "텍스트 (선택 사항)",
     "textInputPlaceholder": "여기에 텍스트를 입력하세요...",
     "styleTitle": "시각 효과 선택",
     "generateButton": "비디오 생성하기",
