feat: 비주얼 아트 설정 및 AI 모델 통합 기능 개선
- VisualArtConfig 인터페이스 추가 및 VisualArtState에서 효과를 설정하는 방식 변경
- VisualArtGenerator 컴포넌트에 고급 설정 토글 기능 추가
- 다양한 AI 모델 옵션을 constants.ts에 추가하여 사용자 선택 가능
- AIService에 MistralService 통합 및 모델 선택 로직 개선
- 사용자 인터페이스에서 고급 설정 관련 텍스트 및 번역 추가

이제 사용자는 비주얼 아트 생성 시 더욱 세밀한 설정을 통해 다양한 AI 모델을 활용할 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -251,7 +251,29 @@
     "styleTitle": "Choose Visual Effect",
     "generateButton": "Generate Video",
     "generating": "Generating...",
-    "resultTitle": "Generated Video"
+    "resultTitle": "Generated Video",
+    "showSettings": "Advanced Settings",
+    "hideSettings": "Hide Settings",
+    "imageInputLabel": "Source Image (Optional)",
+    "removeImage": "Remove Image",
+    "instruction": "Transform text and images into stunning visual art"
+  },
+  "visualArtSettings": {
+    "title": "Advanced Visual Art Settings",
+    "aiSection": "AI Model Settings",
+    "visualSection": "Visual Settings",
+    "outputSection": "Output Settings",
+    "textModel": "Text AI Model",
+    "imageModel": "Image AI Model",
+    "videoModel": "Video AI Model",
+    "creativity": "Creativity Level",
+    "effect": "Visual Effect",
+    "style": "Art Style",
+    "aspectRatio": "Aspect Ratio",
+    "quality": "Output Quality",
+    "outputFormat": "Output Format",
+    "duration": "Animation Duration",
+    "outputNote": "Video and GIF formats support animation. Image format creates a static artwork."
   },
   "visualArtEffects": {
     "glitch": "Glitch Art",
