--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -251,7 +251,29 @@
     "styleTitle": "시각 효과 선택",
     "generateButton": "비디오 생성하기",
     "generating": "생성 중...",
-    "resultTitle": "생성된 비디오"
+    "resultTitle": "생성된 비디오",
+    "showSettings": "고급 설정",
+    "hideSettings": "설정 숨기기",
+    "imageInputLabel": "소스 이미지 (선택사항)",
+    "removeImage": "이미지 제거",
+    "instruction": "텍스트와 이미지를 멋진 비주얼 아트로 변환"
+  },
+  "visualArtSettings": {
+    "title": "고급 비주얼 아트 설정",
+    "aiSection": "AI 모델 설정",
+    "visualSection": "비주얼 설정",
+    "outputSection": "출력 설정",
+    "textModel": "텍스트 AI 모델",
+    "imageModel": "이미지 AI 모델",
+    "videoModel": "비디오 AI 모델",
+    "creativity": "창의성 수준",
+    "effect": "비주얼 효과",
+    "style": "아트 스타일",
+    "aspectRatio": "화면 비율",
+    "quality": "출력 품질",
+    "outputFormat": "출력 형식",
+    "duration": "애니메이션 길이",
+    "outputNote": "비디오와 GIF 형식은 애니메이션을 지원합니다. 이미지 형식은 정적 작품을 생성합니다."
   },
   "visualArtEffects": {
     "glitch": "글리치 아트",
