캐릭터 생성 기능 및 프리셋 선택기 추가
- App.tsx에 캐릭터 생성 컴포넌트를 추가하고, 모드 스위처에 캐릭터 모드를 포함시켰습니다.
- types.ts에 CHARACTER 모드를 추가하여 애플리케이션의 모드 관리를 개선했습니다.
- CharacterManager.tsx에서 캐릭터 추가 기능을 개선하고, 프리셋 선택기를 통해 사용자 경험을 향상시켰습니다.
- i18n 번역 파일에 캐릭터 생성기 관련 텍스트를 추가하여 다국어 지원을 강화했습니다.

이제 사용자는 캐릭터를 생성하고, 다양한 프리셋을 선택하여 캐릭터의 특성을 쉽게 설정할 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -21,7 +21,8 @@
     "productDescription": "Product Description",
     "storyboard": "Storyboard Generator",
     "mediaArt": "Media Art Generator",
-    "visualArt": "Visual Art Generator"
+    "visualArt": "Visual Art Generator",
+    "character": "Character Creator"
   },
   "inputForm": {
     "productName": "Product Name",
