캐릭터 생성기 컴포넌트의 다국어 지원을 강화하고, 사용자 인터페이스의 텍스트를 i18n 번역 파일에 추가했습니다. 또한, 오류 메시지를 개선하여 사용자 경험을 향상시켰습니다. 이제 사용자는 다양한 언어로 캐릭터 생성기를 사용할 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -24,6 +24,50 @@
     "visualArt": "Visual Art Generator",
     "character": "Character Creator"
   },
+  "characterCreator": {
+    "title": "Character Creator",
+    "subtitle": "AI-powered character design and reference generation",
+    "newCharacter": "New Character",
+    "characterList": "Character List",
+    "noCharacters": "No characters created yet",
+    "createCharacter": "Create New Character",
+    "presets": "Presets",
+    "presetSelector": "Preset Selector",
+    "characterName": "Character Name",
+    "characterNamePlaceholder": "e.g., John Smith, Sarah",
+    "role": "Role",
+    "protagonist": "Protagonist",
+    "supporting": "Supporting",
+    "extra": "Extra",
+    "characterStyle": "Character Style",
+    "cinematic": "Cinematic",
+    "photorealistic": "Photorealistic",
+    "animation": "Animation",
+    "anime": "Anime",
+    "conceptArt": "Concept Art",
+    "appearance": "Physical Description",
+    "appearancePlaceholder": "Select presets or enter manually...",
+    "clothing": "Clothing Description",
+    "clothingPlaceholder": "e.g., Black suit, white shirt",
+    "personality": "Personality Traits",
+    "personalityPlaceholder": "e.g., Calm and analytical",
+    "cancel": "Cancel",
+    "create": "Create",
+    "add": "Add",
+    "fullBodyReference": "Full Body Reference",
+    "headshot": "Headshot",
+    "generateImage": "Generate Image",
+    "generatingImage": "Generating image...",
+    "imageGeneration": "Image Generation",
+    "customPrompt": "Custom prompt...",
+    "generate": "Generate",
+    "additionalImages": "Additional Generated Images",
+    "exportCharacter": "Export Character",
+    "importCharacter": "Import Character",
+    "selectOrCreate": "Select a character or create a new one",
+    "viewMode": "Change View Mode",
+    "applyPreset": "Apply Preset"
+  },
   "inputForm": {
     "productName": "Product Name",
     "productNamePlaceholder": "e.g., Nebula Smart Projector",
