--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -24,6 +24,50 @@
     "visualArt": "비주얼 아트 생성기",
     "character": "캐릭터 생성기"
   },
+  "characterCreator": {
+    "title": "캐릭터 생성기",
+    "subtitle": "AI 기반 캐릭터 디자인 및 레퍼런스 생성",
+    "newCharacter": "새 캐릭터",
+    "characterList": "캐릭터 목록",
+    "noCharacters": "아직 생성된 캐릭터가 없습니다",
+    "createCharacter": "새 캐릭터 만들기",
+    "presets": "프리셋",
+    "presetSelector": "프리셋 선택기",
+    "characterName": "캐릭터 이름",
+    "characterNamePlaceholder": "예: 김철수, Sarah",
+    "role": "역할",
+    "protagonist": "주인공",
+    "supporting": "조연",
+    "extra": "엑스트라",
+    "characterStyle": "캐릭터 스타일",
+    "cinematic": "영화",
+    "photorealistic": "실사",
+    "animation": "애니메이션",
+    "anime": "애니메",
+    "conceptArt": "컨셉 아트",
+    "appearance": "외모 설명",
+    "appearancePlaceholder": "프리셋을 선택하거나 직접 입력...",
+    "clothing": "의상 설명",
+    "clothingPlaceholder": "예: 검은 정장, 흰 셔츠",
+    "personality": "성격 특징",
+    "personalityPlaceholder": "예: 차분하고 분석적",
+    "cancel": "취소",
+    "create": "생성",
+    "add": "추가",
+    "fullBodyReference": "전신 레퍼런스",
+    "headshot": "헤드샷",
+    "generateImage": "이미지 생성",
+    "generatingImage": "이미지 생성 중...",
+    "imageGeneration": "이미지 생성",
+    "customPrompt": "커스텀 프롬프트...",
+    "generate": "생성",
+    "additionalImages": "추가 생성 이미지",
+    "exportCharacter": "캐릭터 내보내기",
+    "importCharacter": "캐릭터 가져오기",
+    "selectOrCreate": "캐릭터를 선택하거나 새로 만들어주세요",
+    "viewMode": "뷰 모드 변경",
+    "applyPreset": "프리셋 적용"
+  },
   "inputForm": {
     "productName": "제품명",
     "productNamePlaceholder": "예: 네뷸라 스마트 프로젝터",
