캐릭터 생성기 및 프리셋 선택기 개선
- 캐릭터 생성기에서 AI 캐릭터 생성 기능을 추가하고, 디지털 휴먼 옵션을 포함하여 사용자 경험을 향상시켰습니다.
- 프리셋 선택기를 개선하여 사용자 인터페이스를 직관적으로 만들고, 프리셋 미리보기 기능을 추가했습니다.
- i18n 번역 파일에 캐릭터 생성기 관련 텍스트를 추가하여 다국어 지원을 강화했습니다.
- 패키지 의존성을 업데이트하여 최신 라이브러리를 반영했습니다.

이제 사용자는 더욱 풍부한 기능을 통해 캐릭터를 생성하고, 다양한 프리셋을 쉽게 적용할 수 있습니다.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -21,8 +21,81 @@
     "productDescription": "Product Description",
     "storyboard": "Storyboard Generator",
     "mediaArt": "Media Art Generator",
-    "visualArt": "Visual Art Generator"
+    "visualArt": "Visual Art Generator",
+    "character": "Character Generator"
   },
+  "characterCreator": {
+    "title": "Character Creator",
+    "description": "Design characters and generate reference art with AI.",
+    "changeViewMode": "Toggle view mode",
+    "importCharacter": "Import character",
+    "newCharacter": "New Character",
+    "createNewCharacter": "Create New Character",
+    "presets": "Presets",
+    "characterName": "Character Name",
+    "namePlaceholder": "e.g., John Smith",
+    "role": "Role",
+    "protagonist": "Protagonist",
+    "supporting": "Supporting",
+    "extra": "Extra",
+    "characterStyle": "Character Style",
+    "styleCinematic": "Cinematic",
+    "stylePhotorealistic": "Photorealistic",
+    "styleAnimation": "Animation",
+    "styleAnime": "Anime",
+    "styleConceptArt": "Concept Art",
+    "physicalDescription": "Physical Description",
+    "physicalDescriptionPlaceholder": "Describe appearance, build, and key features...",
+    "clothingDescription": "Clothing Description",
+    "clothingPlaceholder": "Describe outfit details...",
+    "personalityTraits": "Personality Traits",
+    "personalityPlaceholder": "Describe personality or demeanor...",
+    "cancel": "Cancel",
+    "create": "Create",
+    "characterList": "Character List",
+    "noCharactersYet": "No characters yet",
+    "applyPresets": "Apply presets",
+    "exportCharacter": "Export character",
+    "imageGeneration": "Image Generation",
+    "fullBodyReference": "Full Body Reference",
+    "headshot": "Headshot",
+    "customPromptPlaceholder": "Write a custom prompt...",
+    "generate": "Generate",
+    "generatingImage": "Generating image...",
+    "additionalGeneratedImages": "Additional Generated Images",
+    "selectOrCreateCharacter": "Select or create a character to get started.",
+    "imageGenerationFailed": "Image generation failed",
+    "aiGenerationFailed": "AI character generation failed",
+    "cannotReadCharacterFile": "Could not read character file"
+  },
+  "characterPresets": {
+    "title": "Character Preset Selector",
+    "selectedCount": "{{count}} selected",
+    "preview": "Preview",
+    "clearAll": "Clear all",
+    "searchPlaceholder": "Search presets...",
+    "generatePrompt": "Generate Prompt",
+    "previewTitle": "Selected Presets Preview",
+    "generatedPrompt": "Generated Prompt:",
+    "close": "Close",
+    "applyPrompt": "Apply Prompt",
+    "contextNew": "New character setup",
+    "contextExisting": "Updating {{name}}",
+    "contextExistingFallback": "Selected character",
+    "noSelectionHint": "No presets selected yet. Choose a category to begin.",
+    "noResults": "No presets match \"{{term}}\" in this category.",
+    "promptHint": "Use these presets to instantly enrich descriptions or build AI prompts.",
+    "categories": {
+      "bodyType": "Body Type",
+      "faceShape": "Face Shape",
+      "ageRange": "Age Range",
+      "hairStyle": "Hair Style",
+      "clothingStyle": "Clothing Style",
+      "personality": "Personality Traits",
+      "accessories": "Accessories",
+      "specialFeatures": "Special Features"
+    }
+  },
   "inputForm": {
     "productName": "Product Name",
     "productNamePlaceholder": "e.g., Nebula Smart Projector",
