--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -56,6 +56,7 @@
     "add": "Add",
     "fullBodyReference": "Full Body Reference",
     "headshot": "Headshot",
+    "imageModel": "Image Generation Model",
     "generateImage": "Generate Image",
     "generatingImage": "Generating image...",
     "imageGeneration": "Image Generation",
