--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -56,6 +56,7 @@
     "add": "추가",
     "fullBodyReference": "전신 레퍼런스",
     "headshot": "헤드샷",
+    "imageModel": "이미지 생성 모델",
     "generateImage": "이미지 생성",
     "generatingImage": "이미지 생성 중...",
     "imageGeneration": "이미지 생성",
