캐릭터 생성기 이미지 생성 기능 개선
- CharacterCreator.tsx에서 이미지 생성 옵션을 통합하고, 전신 이미지, 정면 얼굴 이미지, 45도 각도 얼굴 이미지를 자동으로 생성하도록 변경했습니다.
- 로컬 스토리지에서 캐릭터 데이터를 복원하고, 데이터 변경 시 자동으로 저장하는 기능을 추가했습니다.
- 오류 처리 및 사용자 피드백을 개선하여 이미지 생성 실패 시 재시도 기능을 추가했습니다.
- i18n 번역 파일에 새로운 텍스트를 추가하여 다국어 지원을 강화했습니다.

이제 사용자는 더욱 직관적으로 캐릭터 이미지를 생성하고, 다양한 얼굴 각도를 포함한 이미지를 쉽게 얻을 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -56,6 +56,9 @@
     "add": "Add",
     "fullBodyReference": "Full Body Reference",
     "headshot": "Headshot",
+    "frontFace": "Front Face (Passport Style)",
+    "angleFace": "45-Degree Angle Face",
+    "generatingImages": "Generating character images...",
     "imageModel": "Image Generation Model",
     "generateImage": "Generate Image",
     "generatingImage": "Generating image...",
@@ -67,7 +70,14 @@
     "importCharacter": "Import Character",
     "selectOrCreate": "Select a character or create a new one",
     "viewMode": "Change View Mode",
-    "applyPreset": "Apply Preset"
+    "applyPreset": "Apply Preset",
+    "retry": "Retry",
+    "replaceMode": "Replace existing content",
+    "appendMode": "Append to existing content",
+    "aiGenerationFailed": "AI generation failed",
+    "generationFailed": "Generation failed",
+    "imageGenerationFailed": "Image generation failed",
+    "cannotReadCharacterFile": "Cannot read character file"
   },
   "inputForm": {
     "productName": "Product Name",
