--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -56,6 +56,9 @@
     "add": "추가",
     "fullBodyReference": "전신 레퍼런스",
     "headshot": "헤드샷",
+    "frontFace": "정면 얼굴 (여권 사진 스타일)",
+    "angleFace": "45도 각도 얼굴",
+    "generatingImages": "캐릭터 이미지 생성 중...",
     "imageModel": "이미지 생성 모델",
     "generateImage": "이미지 생성",
     "generatingImage": "이미지 생성 중...",
@@ -67,7 +70,14 @@
     "importCharacter": "캐릭터 가져오기",
     "selectOrCreate": "캐릭터를 선택하거나 새로 만들어주세요",
     "viewMode": "뷰 모드 변경",
-    "applyPreset": "프리셋 적용"
+    "applyPreset": "프리셋 적용",
+    "retry": "재시도",
+    "replaceMode": "기존 내용 대체",
+    "appendMode": "기존 내용에 추가",
+    "aiGenerationFailed": "AI 생성 실패",
+    "generationFailed": "생성 실패",
+    "imageGenerationFailed": "이미지 생성 실패",
+    "cannotReadCharacterFile": "캐릭터 파일을 읽을 수 없습니다"
   },
   "inputForm": {
     "productName": "제품명",
