캐릭터 생성기 기능 개선 및 다국어 지원 강화
- CharacterCreator.tsx에서 캐릭터의 성별 및 종류를 선택할 수 있는 기능을 추가했습니다.
- 캐릭터 생성 시 기본값으로 중성과 인간을 설정하도록 변경했습니다.
- 이미지 생성 로직을 개선하여 일관된 캐릭터 설명을 기반으로 이미지를 생성하도록 했습니다.
- i18n 번역 파일에 성별 및 캐릭터 종류 관련 텍스트를 추가하여 다국어 지원을 강화했습니다.

이제 사용자는 더욱 다양한 캐릭터 특성을 설정하고, 일관된 이미지를 생성할 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -39,12 +39,27 @@
     "protagonist": "Protagonist",
     "supporting": "Supporting",
     "extra": "Extra",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "neutral": "Neutral",
+    "characterType": "Character Type",
+    "human": "Human",
+    "animal": "Animal (Bipedal)",
+    "fantasy": "Fantasy Creature",
+    "robot": "Robot",
+    "alien": "Alien",
     "characterStyle": "Character Style",
     "cinematic": "Cinematic",
     "photorealistic": "Photorealistic",
     "animation": "Animation",
     "anime": "Anime",
     "conceptArt": "Concept Art",
+    "styleCinematic": "Cinematic",
+    "stylePhotorealistic": "Photorealistic",
+    "styleAnimation": "Animation",
+    "styleAnime": "Anime",
+    "styleConceptArt": "Concept Art",
     "appearance": "Physical Description",
     "appearancePlaceholder": "Select presets or enter manually...",
     "clothing": "Clothing Description",
@@ -59,6 +74,7 @@
     "frontFace": "Front Face (Passport Style)",
     "angleFace": "45-Degree Angle Face",
     "generatingImages": "Generating character images...",
+    "faceGeneratedGeneratingBody": "Face generated! Creating full body and angle views...",
     "imageModel": "Image Generation Model",
     "generateImage": "Generate Image",
     "generatingImage": "Generating image...",
@@ -77,7 +93,9 @@
     "aiGenerationFailed": "AI generation failed",
     "generationFailed": "Generation failed",
     "imageGenerationFailed": "Image generation failed",
-    "cannotReadCharacterFile": "Cannot read character file"
+    "cannotReadCharacterFile": "Cannot read character file",
+    "partialSuccess": "Partial success - failed to generate",
+    "couldNotGenerate": "could not be generated"
   },
   "inputForm": {
     "productName": "Product Name",
