--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -39,12 +39,27 @@
     "protagonist": "주인공",
     "supporting": "조연",
     "extra": "엑스트라",
+    "gender": "성별",
+    "male": "남성",
+    "female": "여성",
+    "neutral": "중성",
+    "characterType": "캐릭터 종류",
+    "human": "인간",
+    "animal": "동물 (2족보행)",
+    "fantasy": "판타지 생물",
+    "robot": "로봇",
+    "alien": "외계인",
     "characterStyle": "캐릭터 스타일",
     "cinematic": "영화",
     "photorealistic": "실사",
     "animation": "애니메이션",
     "anime": "애니메",
     "conceptArt": "컨셉 아트",
+    "styleCinematic": "영화",
+    "stylePhotorealistic": "실사",
+    "styleAnimation": "애니메이션",
+    "styleAnime": "애니메",
+    "styleConceptArt": "컨셉 아트",
     "appearance": "외모 설명",
     "appearancePlaceholder": "프리셋을 선택하거나 직접 입력...",
     "clothing": "의상 설명",
@@ -59,6 +74,7 @@
     "frontFace": "정면 얼굴 (여권 사진 스타일)",
     "angleFace": "45도 각도 얼굴",
     "generatingImages": "캐릭터 이미지 생성 중...",
+    "faceGeneratedGeneratingBody": "얼굴 생성 완료! 전신 및 각도 뷰 생성 중...",
     "imageModel": "이미지 생성 모델",
     "generateImage": "이미지 생성",
     "generatingImage": "이미지 생성 중...",
@@ -77,7 +93,9 @@
     "aiGenerationFailed": "AI 생성 실패",
     "generationFailed": "생성 실패",
     "imageGenerationFailed": "이미지 생성 실패",
-    "cannotReadCharacterFile": "캐릭터 파일을 읽을 수 없습니다"
+    "cannotReadCharacterFile": "캐릭터 파일을 읽을 수 없습니다",
+    "partialSuccess": "부분 성공 - 생성 실패",
+    "couldNotGenerate": "생성할 수 없었습니다"
   },
   "inputForm": {
     "productName": "제품명",
