캐릭터 생성기 기능 개선 및 일관성 향상
- CharacterCreator.tsx에서 수동 특징 입력 기능을 추가하여 사용자가 캐릭터의 세부 사항을 더욱 구체적으로 조정할 수 있도록 했습니다.
- 이미지 생성 로직을 개선하여 일관된 캐릭터 설명을 기반으로 더욱 정밀한 이미지를 생성하도록 변경했습니다.
- i18n 번역 파일에 새로운 텍스트를 추가하여 다국어 지원을 강화했습니다.

이제 사용자는 캐릭터의 특징을 세밀하게 조정하고, 일관된 이미지를 생성할 수 있습니다.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -75,6 +75,10 @@
     "angleFace": "45-Degree Angle Face",
     "generatingImages": "Generating character images...",
     "faceGeneratedGeneratingBody": "Face generated! Creating full body and angle views...",
+    "improveConsistency": "Improve Character Consistency",
+    "refineFeatures": "Look at the first image and enter more specific features to improve consistency",
+    "featurePlaceholder": "e.g., short black bob hair, brown eyes, round face, small nose, black leather jacket...",
+    "regenerateWithFeatures": "Generate remaining images with features",
     "imageModel": "Image Generation Model",
     "generateImage": "Generate Image",
     "generatingImage": "Generating image...",
