--- a/i18n/translations/ko.json
+++ b/i18n/translations/ko.json
@@ -75,6 +75,10 @@
     "angleFace": "45도 각도 얼굴",
     "generatingImages": "캐릭터 이미지 생성 중...",
     "faceGeneratedGeneratingBody": "얼굴 생성 완료! 전신 및 각도 뷰 생성 중...",
+    "improveConsistency": "캐릭터 일관성 개선",
+    "refineFeatures": "첫 번째 이미지를 보고 더 구체적인 특징을 입력하면 일관성이 향상됩니다",
+    "featurePlaceholder": "예: 검은색 짧은 단발머리, 갈색 눈, 둥근 얼굴형, 작은 코, 검은색 가죽 재킷...",
+    "regenerateWithFeatures": "특징 적용하여 나머지 생성",
     "imageModel": "이미지 생성 모델",
     "generateImage": "이미지 생성",
     "generatingImage": "이미지 생성 중...",
